k8s/app/app-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: eliafelletti/flask-thesis-app:latest # Use the latest image from Docker Hub
          imagePullPolicy: Always
          resources:
            requests: # Minimum resources required
              memory: "128Mi"  
              cpu: "100m"      
            limits: # Maximum resources allowed
              memory: "256Mi"  
              cpu: "300m"      
          ports:
            - containerPort: 5000 # Port exposed by the Flask app
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-thesis-app.local 
      http:
        paths:
          - path: / # Redirect all paths to service "flask-service"
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
